IMS-47 & IMS-50: Redux and some Ui fixes

--- a/src/components/backboneComponents/account/account.less
+++ b/src/components/backboneComponents/account/account.less
@@ -23,11 +23,26 @@
 .account-section {
   display: flex;
   flex-direction: column;
-  margin: 10px 30px;
-  padding: 32px 80px;
+  margin: 5% 7%;
+  padding: 10% 15%;
   background: rgb(255, 255, 255);
-  border-radius: 3px;
+  border-radius: 5%;
   box-shadow: gray 0px 0px 10px;
   box-sizing: border-box;
   color: rgb(94, 108, 132);
+}
+
+.layout {
+  background-color: inherit;
+}
+
+.button {
+  height: 40px;
+  width: 100%;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.button > span {
+  display: flex;
 }
